# vefas

./: CLAUDE.md  CUDA_SETUP.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  README.md  SETUP.md  attestation_key.pem  attestation_key.pub  rust-toolchain.toml  vector.json
crates/vefas-core/: Cargo.toml
crates/vefas-core/src/: bundle.rs  bundle_validation.rs  client.rs  cryptographic_validator.rs  error.rs  guest_validator.rs  http.rs  keylog.rs  lib.rs  records.rs  session.rs  transport.rs  validation.rs
crates/vefas-core/tests/: bundle_canonical.rs  ecdhe_private_key_capture.rs  error_mapping.rs  http_streaming.rs  integration_errors.rs  integration_httpbin.rs  keylog_export.rs  keylog_labels.rs  tls_tee_bounds.rs
crates/vefas-crypto/: Cargo.toml
crates/vefas-crypto-native/: Cargo.toml
crates/vefas-crypto-native/src/: aead.rs  crypto_provider.rs  hash.rs  kdf.rs  key_exchange.rs  lib.rs  provider.rs  signature.rs  tls_utils.rs
crates/vefas-crypto-native/tests/: certificate_verification.rs  cipher_suite_crypto_tests.rs  comprehensive_certificate_validation.rs  comprehensive_tls_matrix.rs  test_tbs_extraction.rs  tls13_certificate_validation.rs
crates/vefas-crypto-risc0/: Cargo.toml
crates/vefas-crypto-risc0/src/: crypto_provider.rs  lib.rs
crates/vefas-crypto-risc0/tests/: certificate_verification.rs  cipher_suite_crypto_tests.rs  comprehensive_certificate_validation.rs  comprehensive_tls_matrix.rs  test_tbs_extraction.rs  tls13_certificate_validation.rs
crates/vefas-crypto-sp1/: Cargo.toml
crates/vefas-crypto-sp1/src/: crypto_provider.rs  lib.rs
crates/vefas-crypto-sp1/tests/: certificate_verification.rs  cipher_suite_crypto_tests.rs  comprehensive_certificate_validation.rs  comprehensive_tls_matrix.rs  test_tbs_extraction.rs  tls13_certificate_validation.rs
crates/vefas-crypto/src/: bundle_parser.rs  constants.rs  error.rs  http_utils.rs  input_validation.rs  lib.rs  merkle.rs  tls_parser.rs  traits.rs  types.rs  validation.rs  x509_parser.rs
crates/vefas-crypto/tests/: bundle_integration.rs  cross_platform_consistency.rs  key_schedule_vectors.rs  merkle_proof_matrix.rs
crates/vefas-gateway/: Cargo.toml
crates/vefas-gateway/src/: error.rs  handlers.rs  lib.rs  main.rs  proof.rs  types.rs
crates/vefas-gateway/tests/: integration_tests.rs
crates/vefas-gateway/tests/e2e/: merkle_proof_e2e.rs
crates/vefas-gateway/tests/security/: security_tests.rs
crates/vefas-node/: Cargo.toml  attestation_key.pem  attestation_key.pub
crates/vefas-node/certs/: README.md  download_roots.sh
crates/vefas-node/src/: error.rs  handlers.rs  lib.rs  main.rs  types.rs
crates/vefas-node/src/zktls/: attestation.rs  certificate.rs  mod.rs  ocsp.rs  prover.rs  transparency.rs  verifier.rs
crates/vefas-node/tests/: integration_tests.rs
crates/vefas-risc0/: Cargo.toml
crates/vefas-risc0/methods/: Cargo.toml
crates/vefas-risc0/methods/guest/: Cargo.toml
crates/vefas-risc0/methods/src/: lib.rs
crates/vefas-risc0/src/: lib.rs  main.rs
crates/vefas-rustls/: Cargo.toml
crates/vefas-rustls/src/: lib.rs  provider.rs
crates/vefas-rustls/tests/: provider_capture.rs
crates/vefas-sp1/: Cargo.toml
crates/vefas-sp1/program/: Cargo.toml
crates/vefas-sp1/program/src/: main.rs  selective_extraction.rs
crates/vefas-sp1/script/: Cargo.toml
crates/vefas-sp1/script/src/: lib.rs
crates/vefas-sp1/src/: lib.rs
crates/vefas-types/: Cargo.toml
crates/vefas-types/src/: bundle.rs  compression.rs  crypto_provider.rs  errors.rs  handshake_proof.rs  http.rs  input.rs  lib.rs  output.rs  tls.rs  traits.rs  utils.rs
crates/vefas-types/tests/: bundle_hash.rs  bundle_hash_canonical.rs  cipher_suite_tests.rs
crates/zktls-core/: Cargo.toml
crates/zktls-core/src/: config.rs  errors.rs  lib.rs  network.rs  utils.rs
crates/zktls-core/src/asn1/: error.rs  mod.rs  parser.rs  types.rs
crates/zktls-core/src/client/: http_client.rs  mod.rs  session.rs  tls_client.rs  url.rs
crates/zktls-core/src/http/: commitment.rs  headers.rs  merkle.rs  message.rs  mod.rs  request.rs  response.rs
crates/zktls-core/src/tls/: application.rs  enhanced_state_machine.rs  extensions.rs  handshake.rs  key_schedule.rs  messages.rs  mod.rs  state_machine.rs  transcript.rs
crates/zktls-core/src/types/: crypto_types.rs  http_types.rs  mod.rs  tls_types.rs
crates/zktls-crypto/: Cargo.toml
crates/zktls-crypto-risc0/: Cargo.toml
crates/zktls-crypto-risc0/src/: lib.rs
crates/zktls-crypto-sp1/: Cargo.toml
crates/zktls-crypto-sp1/src/: lib.rs
crates/zktls-crypto/src/: error.rs  hash.rs  lib.rs  traits.rs
crates/zktls-crypto/tests/: lib.rs  mod.rs  test_vectors.rs
crates/zktls-gateway/: Cargo.toml  README.md
crates/zktls-gateway/src/: config.rs  error.rs  lib.rs  main.rs  service.rs  types.rs
crates/zktls-risc0/: Cargo.toml
crates/zktls-risc0/methods/: Cargo.toml
crates/zktls-risc0/src/: lib.rs  main.rs
crates/zktls-sp1/program/: Cargo.toml
crates/zktls-zkvm/: Cargo.toml
crates/zktls-zkvm/src/: guest.rs  lib.rs  types.rs
crates/zktls-zkvm/tests/: certificate_parsing_tests.rs  http_verification_tests.rs  session_key_derivation_tests.rs  sp1_integration_test.rs  tls_handshake_parsing_tests.rs
tests/: Cargo.toml  e2e_tests.rs  integration_tests.rs  lib.rs  security_tests.rs
tests/e2e/cross_platform/: platform_consistency.rs
tests/e2e/regression/: regression_tests.rs
tests/e2e/stress/: load_tests.rs
tests/fixtures/: sample_input.json
tests/fixtures/certificates/: cert_wildcard_san.crt  cert_with_san.crt  cert_with_san.der  cn_only_config.cnf  expired.crt  expired.der  expired.key  intermediate_ca.key  leaf.csr  root_ca.crt  root_ca.srl  san_and_cn_config.cnf  san_config.cnf  self_signed.der  test_ecdsa_cert.pem  test_ecdsa_key.pem  wildcard_san_config.cnf
tests/integration/gateway/: integration_tests.rs  test_gateway_api_integration.rs
tests/integration/network/: crypto_verification_test.rs
tests/security/attack_vectors/: http_attacks.rs  tls_attacks.rs
tests/security/fuzzing/: tls_parser_fuzz.rs
tests/security/penetration/: attack_scenarios.rs
(+127 files in other folders)
