[workspace]
resolver = "2"
members = [
    "crates/zktls-core",
    "crates/zktls-crypto",
    "crates/zktls-crypto-sp1",
    "crates/zktls-crypto-risc0",
    "crates/zktls-zkvm",
    "crates/zktls-sp1",
    "crates/zktls-sp1/program",
    "crates/zktls-sp1/script",
    "crates/zktls-risc0",
    "crates/zktls-gateway"
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

# Common dependencies used across multiple crates
[workspace.dependencies]
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0.16"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"

# Testing
rstest = "0.26.1"
proptest = "1.7.0"

# Root package for workspace feature flags
[package]
name = "vefas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
sp1 = [
    "zktls-core/sp1",
    "zktls-gateway/sp1"
]
risc0 = [
    "zktls-core/risc0",
    "zktls-gateway/risc0"
]

[dependencies]
zktls-crypto = { path = "crates/zktls-crypto", default-features = false }
zktls-crypto-sp1 = { path = "crates/zktls-crypto-sp1", optional = true }
zktls-core = { path = "crates/zktls-core", default-features = false }
zktls-zkvm = { path = "crates/zktls-zkvm", default-features = false }
zktls-gateway = { path = "crates/zktls-gateway", default-features = false }
