[workspace]
resolver = "2"
members = [
    "crates/vefas-types",
    "crates/vefas-crypto",
    "crates/vefas-crypto-native",
    "crates/vefas-crypto-sp1",
    "crates/vefas-crypto-risc0",
    "crates/vefas-core",
    "crates/vefas-gateway",
    "crates/vefas-rustls",
    "crates/vefas-sp1",
    "crates/vefas-sp1/script",
    "crates/vefas-sp1/program",
    "crates/vefas-risc0",
    "crates/vefas-risc0/methods",
    "crates/vefas-risc0/methods/guest"
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

# Common dependencies used across multiple crates
[workspace.dependencies]
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0.16"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"

# Testing
rstest = "0.26.1"
proptest = "1.7.0"

# Root package for workspace feature flags
[package]
name = "vefas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false


[features]
default = []
# All platforms are now built by default - no feature flags needed

[dependencies]
# Internal dependencies - using new vefas- prefixed crates
vefas-types = { path = "crates/vefas-types", default-features = false }
vefas-crypto = { path = "crates/vefas-crypto", default-features = false }
vefas-crypto-native = { path = "crates/vefas-crypto-native", default-features = false }
vefas-crypto-sp1 = { path = "crates/vefas-crypto-sp1", default-features = false }
vefas-crypto-risc0 = { path = "crates/vefas-crypto-risc0", default-features = false }
vefas-core = { path = "crates/vefas-core", default-features = false, features = ["std", "tokio-rustls"] }


# Async runtime
tokio.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0"
axum = { version = "0.8", features = ["http2", "macros", "tracing"] }
tower = { version = "0.5", features = ["util"] }
vefas-gateway = { path = "crates/vefas-gateway" }
