[package]
name = "vefas-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "vefas_tests"
path = "lib.rs"

[[bin]]
name = "integration_tests"
path = "integration_tests.rs"

[dependencies]
# Gateway and core
vefas-gateway = { path = "../crates/vefas-gateway" }
vefas-core = { path = "../crates/vefas-core" }
# VEFAS crypto provider crates
vefas-crypto = { path = "../crates/vefas-crypto" }
vefas-crypto-native = { path = "../crates/vefas-crypto-native" }
vefas-crypto-sp1 = { path = "../crates/vefas-crypto-sp1" }
vefas-crypto-risc0 = { path = "../crates/vefas-crypto-risc0" }
vefas-types = { path = "../crates/vefas-types" }

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"

# Error handling
thiserror = "2.0.16"

# Testing
rstest = "0.26.1"
proptest = "1.7.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hex-literal = "1.0"

# Security testing
uuid = { version = "1.8", features = ["v4"] }
futures = "0.3"
fastrand = "2.0"

# HTTP client for real network tests
reqwest = { version = "0.12", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Web framework runtime used by the server under test
axum = { version = "0.8", features = ["http2", "macros", "tracing"] }
tower = { version = "0.5", features = ["util"] }
