[package]
name = "vefas-risc0"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies - using new vefas- prefixed crates
vefas-types = { path = "../vefas-types" }
vefas-crypto = { path = "../vefas-crypto" }
vefas-crypto-native = { path = "../vefas-crypto-native" }

# RISC0-specific dependencies
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["client", "prove", "unstable"] }

# Methods crate for guest program
vefas-risc0-methods = { path = "methods" }

# Common dependencies from workspace
serde.workspace = true
thiserror.workspace = true
bincode.workspace = true

# Platform-specific dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
prove = ["risc0-zkvm/prove"]