[package]
name = "vefas-sp1"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "SP1 zkVM implementation for VEFAS - production-grade zero-knowledge TLS verification for agents"

[dependencies]
# Internal dependencies
vefas-types = { path = "../vefas-types" }
vefas-crypto = { path = "../vefas-crypto" }
uuid = { version = "1.10", features = ["v4"], default-features = false }

# SP1-specific dependencies
sp1-zkvm = { version = "5.2.1", default-features = false, features = ["lib"] }
sp1-sdk = { version = "5.2.1", optional = true }
sp1-core-executor = { version = "5.2.1", optional = true }

# Script crate for guest program
vefas-sp1-script = { path = "script", optional = true }

# Common dependencies from workspace
serde.workspace = true
thiserror.workspace = true
bincode.workspace = true

# Platform-specific dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

[features]
default = ["host-prover"]
host-prover = ["sp1-sdk", "vefas-sp1-script", "sp1-core-executor"]