[package]
name = "vefas-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core data structures and types for VEFAS zkTLS verification"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = { version = "1.3", default-features = false }
heapless = { version = "0.9.1", default-features = false, features = ["serde"] }
sha2 = { version = "0.10", default-features = false }

[features]
default = []
std = ["serde/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Enforce no_std compilation by default
[lib]
name = "vefas_types"
path = "src/lib.rs"