[package]
name = "zktls-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
# Core dependencies from workspace
serde.workspace = true
thiserror.workspace = true

# Internal dependencies
zktls-crypto = { path = "../zktls-crypto", features = [] }

# Specific dependencies for core functionality
hex = { version = "0.4.3", features = ["alloc"] }
heapless = { version = "0.9.1", default-features = false, features = ["serde"] }
serde-big-array = { version = "0.5.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false, features = ["oid"] }

[dev-dependencies]
hex-literal = "1.0.0"

[features]
default = []
std = ["serde/std", "hex/std"]

# zkVM platform support - these are mutually exclusive
sp1 = ["sp1-zkvm"]
risc0 = ["risc0-zkvm"]

# Platform-specific cryptographic implementations
sp1-crypto = ["sp1"]
risc0-crypto = ["risc0"]

[dependencies.sp1-zkvm]
version = "5.2.1"
optional = true

[dependencies.risc0-zkvm]
version = "3.0.3"
optional = true