[package]
name = "zktls-crypto-risc0"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "RISC0-optimized cryptographic implementations for zkTLS using official RISC0 patches"
authors = ["VEFAS Team <team@vefas.io>"]

[dependencies]
# Core zkTLS crypto traits
zktls-crypto = { path = "../zktls-crypto" }

# RISC0 Patched Cryptographic Crates - Official RISC0 patches
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1", features = ["ecdh"] }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
rsa = { git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.6-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
x25519-dalek = "2.0.1"

# Additional crypto dependencies (using patched versions where available)
aes-gcm = "0.11.0-rc.1"
chacha20poly1305 = "0.11.0-rc.1"
hmac = "0.12.1"
hkdf = "0.13.0-rc.1"
ed25519-dalek = "2.2.0"

# Random number generation - use compatible versions
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"

# Array utilities
arrayref = "0.3.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "2.0"

# Testing
hex = "0.4"
hex-literal = "1.0"

[features]
default = []
no_std = ["zktls-crypto/no_std"]