[package]
name = "zktls-crypto-sp1"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "SP1-optimized cryptographic implementations for zkTLS using official SP1 patches"
authors = ["VEFAS Team <team@vefas.io>"]

[dependencies]
# Core crypto traits and types
zktls-crypto = { path = "../zktls-crypto" }

# SP1-specific dependencies
sp1-zkvm = { version = "5.2.1", default-features = false, features = ["lib"] }

# SP1 Patched Cryptographic Crates - Official Succinct patches
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-4.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", package = "p256", tag = "patch-p256-13.2-sp1-5.0.0", features = ["ecdh"] }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", package = "k256", tag = "patch-k256-13.4-sp1-5.0.0" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-5.0.0" }
x25519-dalek = "2.0.1"
ecdsa = { git = "https://github.com/sp1-patches/signatures", tag = "patch-16.9-sp1-4.1.0" }
rsa = { git = "https://github.com/sp1-patches/RustCrypto-RSA", tag = "patch-0.9.6-sp1-5.0.0" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }

# Additional crypto dependencies (using patched versions where available)
aes-gcm = "0.11.0-rc.1"
chacha20poly1305 = "0.11.0-rc.1"
hmac = "0.12.1"
hkdf = "0.13.0-rc.1"
ed25519-dalek = "2.2.0"

# Random number generation - use compatible versions
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"

# Array utilities
arrayref = "0.3.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "2.0"

# Testing
hex = "0.4"
hex-literal = "1.0"

[features]
default = []
no_std = ["zktls-crypto/no_std"]