[package]
name = "zktls-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
no_std = []

[dependencies]
# Serialization
serde.workspace = true

# Error handling
thiserror.workspace = true

# Cryptographic primitives - centralized version management
sha2 = "0.10.9"
hmac = "0.12.1"
hkdf = "0.13.0-rc.1"
aes-gcm = "0.11.0-rc.1"
chacha20poly1305 = "0.11.0-rc.1"

# Elliptic curve cryptography
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "ecdh"] }
k256 = "0.13.4"
curve25519-dalek = "4.1.3"
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"] }
ed25519-dalek = "2.2.0"

# Digital signatures and RSA
ecdsa = "0.16.9"
rsa = "0.9.6"
crypto-bigint = "0.5.5"

# Random number generation
rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
hex-literal = "1.0.0"
