[package]
name = "zktls-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Unified API and CLI gateway for zkTLS verification"
authors = ["VEFAS Team <team@vefas.io>"]

[[bin]]
name = "zktls"
path = "src/main.rs"

[dependencies]
# Internal dependencies
zktls-sp1 = { path = "../zktls-sp1", optional = true }
zktls-risc0 = { path = "../zktls-risc0", optional = true }
zktls-core = { path = "../zktls-core" }
zktls-crypto = { path = "../zktls-crypto" }
zktls-zkvm = { path = "../zktls-zkvm" }

# HTTP API Server dependencies
axum = { version = "0.7", features = ["json", "multipart", "tracing"] }
tokio.workspace = true
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-gzip", "limit"] }
hyper = { version = "1.0", features = ["full"] }

# CLI Interface dependencies
clap = { version = "4.0", features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# Configuration and utilities
config = "0.14"
anyhow = "1.0"
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
futures.workspace = true

[dev-dependencies]
tokio-test = "0.4"
rstest.workspace = true
proptest.workspace = true
tempfile = "3.0"

[features]
default = []
# Gateway is zkVM agnostic - it dynamically loads platforms based on user requests
# Individual platform features are optional and can be enabled as needed
sp1 = ["zktls-sp1"]
risc0 = ["zktls-risc0"]