[package]
name = "zktls-risc0"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
zktls-core = { path = "../zktls-core" }
zktls-crypto-risc0 = { path = "../zktls-crypto-risc0" }
zktls-zkvm = { path = "../zktls-zkvm" }

# RISC0-specific dependencies
risc0-zkvm = { version = "2.1", default-features = false, features = ["prove"] }

# Methods crate for guest program
zktls-risc0-methods = { path = "methods" }

# Common dependencies from workspace
serde.workspace = true
thiserror.workspace = true
bincode.workspace = true

# Platform-specific dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]